--- a/DOM/index4.html
+++ b/DOM/index4.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dom Learning</title>
+    <title>Learnign DOM</title>
     <style>
         body{
-            background-color:#212121;
-            color: azure;
-        }
+        background-color:#212121;
+        color: azure;
+    }
     </style>
 </head>
 <body>
-    
+    <ul class="language">
+        <li>JavaScript</li>
+    </ul>
 </body>
-<script src="index3.js"></script>
+<script src="index4.js"></script>
 </html>
