Added More Colors

--- a/BASICPROJECTS/ColorChanger/index.html
+++ b/BASICPROJECTS/ColorChanger/index.html
@@ -16,6 +16,7 @@
         <div class="colors" id="white"></div>
         <div class="colors" id="Blue"></div>
         <div class="colors" id="Crimson"></div>
+        <div class="colors" id="purple"></div>
     </div>
     <h2>Try Clicking on one of the Colors above <span>
         to change the background color of this page
